--- a/frontend/src/components/pages/calendar/calendar_component.css
+++ b/frontend/src/components/pages/calendar/calendar_component.css
@@ -1,29 +1,29 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
 }
 
 .Calend{
-  width: 100%;
   border: 1px solid;
   background-color: lightblue;
+
 }
 .days{
   border: 1px solid;
-  padding-bottom: 5%;
+
 }
 .food{
   border:1px solid;
-  padding-bottom:10%;
-  margin: auto;
+  justify-content: start;
+  align-items: start;
+  vertical-align: top;
+  padding-left: 10px;
+  padding-right: 10px;
 
 
 }
 .meatloaf{
   border:1px solid;
-  padding-bottom:10%;
   margin: auto;
   color: orange;
   
